--- a/5.5_RES.Rmd
+++ b/5.5_RES.Rmd
@@ -771,7 +771,7 @@ Le modèle a été lissé selon un spline de régression cubique et une précisi
 [![](images/GAM.PNG) </br>\
 Analyse de la dotation des territoires](https://pierre-stephanelebre.shinyapps.io/ANS_carence/)
 
-# Pour en savoir plus {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
+# *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
 
 ## Row {data-height="20"}
 
@@ -794,46 +794,4 @@ Un habitant sur cinq réside dans un territoire où la pratique sportive est dé
 
     -   <https://www.insee.fr/fr/metadonnees/source/operation/s2027/presentation>
 
-# Navigation {data-orientation="rows" data-icon="fa-map-signs" font-size="25px"}
 
-## Row {data-height="20"}
-
-## Row {data-height="100"}
-
-1.  **Généralités**\
-
--   [Territoire(s)](1.1_demo.html)\
--   [Structure de la population](1.2_structure.html)\
--   [évolution de la population](1.3_evol.html)
-
-## Row {data-height="100"}
-
-2.  **Jeunesse**\
-
--   [Jeunesse](2.1_jeunesse.html)\
--   [Préscolaire](2.2_presco.html)\
--   [Accueils collectifs de mineurs](2.3_ACM.html)
-
-## Row {data-height="100"}
-
-3.  **Engagement**\
-
--   [Vie associative](3.1_VA.html)\
--   [Service civique](3.2_SC.html)
-
-## Row {data-height="100"}
-
-4.  **Formation**\
-
--   [Diplômes](4.1_diplomes.html)\
--   [Organismes de formation](4.2_OF3.html)
-
-## Row {data-height="100"}
-
-5.  **Sport**\
-
--   [Clubs sportifs](5.1_clubs.html)\
--   [Licences sportives](5.2_licences.html)\
--   [Sport de nature](5.3_nature.html)\
--   [Piscines](5.4_piscines.html)\
--   [équipements sportifs](5.5_RES.html)
