--- a/4.2_OF3.Rmd
+++ b/4.2_OF3.Rmd
@@ -34,7 +34,7 @@ options(knitr.table.format = "html")
 [![](images/FCE.PNG) </br>\
 Visualisation des OF de la région](https://pierre-stephanelebre.shinyapps.io/FCEshiny/)
 
-# Pour en savoir plus {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
+# *En savoir* **+** {data-orientation="rows" data-icon="fa-info-circle" font-size="25px"}
 
 ## Row {data-height="20"}
 
@@ -43,6 +43,7 @@ Visualisation des OF de la région](https://pierre-stephanelebre.shinyapps.io/FC
 **Cartographie interactive**\
 [![](images/FCE.PNG) </br>\
 Visualisation des OF de la région](https://pierre-stephanelebre.shinyapps.io/FCEshiny/)
+
 
 # Navigation {data-orientation="rows" data-icon="fa-map-signs" font-size="25px"}
 
